// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataVisualization /> should render properly 1`] = `
.emotion-34 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover {
  background-color: #2e2e2e;
}

.emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-31 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-30 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-6 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-10 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-11 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited {
  background-color: #808080;
}

.emotion-13:hover {
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-34"
>
  <div
    className="emotion-33"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-1"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-0"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-2"
        />
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <VisualizerNavigation />
      <div
        className="emotion-31"
      >
        <div
          className="emotion-30"
        >
          <div
            className="emotion-8"
          >
            <div
              className="emotion-7"
            >
              <h2
                className="emotion-5"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-6"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-9"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-10"
              >
                Facet
              </div>
              <div
                className="emotion-11"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-9"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-10"
              >
                Range
              </div>
              <div
                className="emotion-11"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-9"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-10"
              >
                Histogram
              </div>
              <div
                className="emotion-11"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 2`] = `
.emotion-14 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover {
  background-color: #2e2e2e;
}

.emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
  overflow: auto;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 16px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited {
  background-color: #808080;
}

.emotion-7:hover {
  background-color: #b3b3b3;
}

.emotion-7[aria-disabled=true] {
  background-color: #808080;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
  margin-right: 16px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  background-color: #808080;
}

.emotion-8:hover {
  background-color: #b3b3b3;
}

.emotion-8[aria-disabled=true] {
  background-color: #808080;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-1"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-0"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-2"
        />
      </div>
    </div>
    <div
      className="emotion-12"
    >
      <VisualizerNavigation />
      <div
        className="emotion-11"
      >
        <div
          className="emotion-9"
        >
          <button
            aria-label="Add Chart"
            className="emotion-7"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-6"
            >
              <div
                className="emotion-5"
              >
                <svg
                  data-file-name="plus.svg"
                  height={20}
                />
              </div>
              Add Chart
            </div>
          </button>
          <button
            className="emotion-8"
            onClick={[Function]}
            type="button"
          >
            Delete All
          </button>
        </div>
        <div
          className="emotion-10"
        >
          <Charts
            charts={
              Array [
                Object {
                  "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
                  "type": "facet",
                },
              ]
            }
            dispatch={[Function]}
            layouts={Object {}}
            setLayouts={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 3`] = `
.emotion-36 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover {
  background-color: #2e2e2e;
}

.emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-33 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-6 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-12 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-13 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  background-color: #808080;
}

.emotion-8:hover {
  background-color: #b3b3b3;
}

.emotion-8[aria-disabled=true] {
  background-color: #808080;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  className="emotion-36"
>
  <div
    className="emotion-35"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-1"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-0"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-2"
        />
      </div>
    </div>
    <div
      className="emotion-34"
    >
      <VisualizerNavigation />
      <div
        className="emotion-33"
      >
        <div
          className="emotion-32"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-7"
            >
              <h2
                className="emotion-5"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-6"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
            <div
              className="emotion-9"
            >
              <button
                className="emotion-8"
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-14"
            >
              <div
                className="emotion-12"
              >
                Facet
              </div>
              <div
                className="emotion-13"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-16"
            >
              <button
                className="emotion-8"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-14"
            >
              <div
                className="emotion-12"
              >
                Range
              </div>
              <div
                className="emotion-13"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-16"
            >
              <button
                className="emotion-8"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <div
              className="emotion-11"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-14"
            >
              <div
                className="emotion-12"
              >
                Histogram
              </div>
              <div
                className="emotion-13"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-16"
            >
              <button
                className="emotion-8"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 4`] = `
.emotion-34 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #252525;
  margin-bottom: 1px;
  color: #808080;
  border-radius: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover {
  background-color: #2e2e2e;
}

.emotion-0 {
  position: relative;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-32 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-31 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.6);
}

.emotion-30 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-6 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-10 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-11 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited {
  background-color: #808080;
}

.emotion-13:hover {
  background-color: #b3b3b3;
}

.emotion-13[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-34"
>
  <div
    className="emotion-33"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-1"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-0"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-2"
        />
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <VisualizerNavigation />
      <div
        className="emotion-31"
      >
        <div
          className="emotion-30"
        >
          <div
            className="emotion-8"
          >
            <div
              className="emotion-7"
            >
              <h2
                className="emotion-5"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-6"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-9"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-10"
              >
                Facet
              </div>
              <div
                className="emotion-11"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-9"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-10"
              >
                Range
              </div>
              <div
                className="emotion-11"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-9"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-10"
              >
                Histogram
              </div>
              <div
                className="emotion-11"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
